@@ -1071,6 +1071,9 @@
                                 --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
                                 --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
                                 --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+                                --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED
+                                --add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED
+                                --add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
                                 --add-opens=java.base/java.util.regex=ALL-UNNAMED
                             </argLine>
                         </configuration>
